samples/_failures_safe/1761725781_f1de7a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9b5bb94f.c: In function ‘main’:
./samples/SAFE/__tmp_9b5bb94f.c:179:5: error: expected declaration or statement at end of input
  179 |     char input[256];
      |     ^~~~
